2014-05-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (point_next_line, point_prev_line): Check for
	whether we should call forward_move_node_structure or
	backward_move_node_structure added.
	(point_prev_line): Go to end of previous line instead of start.
	(info_forward_char, info_backward_char, info_forward_word)
	(info_backward_word): Rely on checks in point_next_line,
	point_prev_line.

	(point_next_line, point_prev_line, point_forward_char)
	(point_backward_char, point_forward_word, point_backward_word):
	Rely on line map already being calculated for current line.
	
	(point_skip_ws_forward): Merged into point_forward_word.
	(point_skip_ws_backward): Merged into point_backward_word.
	
	(looking_at_alnum): New function.
	(_looking_at_newline, looking_at_newline): Renamed.
	(point_forward_word, point_backward_word): Call looking_at_alnum.

	(move_to_new_line): First argument deleted.  All callers updated.

	Some definitions moved in file for better organization.

2014-05-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes) <--show-options>: Avoid loading
	extra node if we came here from a dir entry.

	(allfiles_create_node): Use numbers as labels, as it was before.
	Using the label as the node spec caused problems when the referenced
	node didn't exist.  Output index tag to show destinations when
	preprocess-nodes=On.

2014-05-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (info_get_menu_entry_by_label): New argument
	for sloppy menu reading.

	* info/info.c (get_initial_file): Calls to lookup_dir_entry updated.
	Try reading dir files sloppily if no exact match was found.  Function
	reorganized.
	(add_initial_nodes, main): Handle case when we were invoked
	like "--node (emacs)Buffers".
	(info_find_matching_files): Check for dir entries as well.

	* info/dir.c (lookup_dir_entry): New argument for whether to search
	inexactly.  Callers updated.
	(dir_entry_of_infodir): New function.
